# mouse-gesture

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  config.example.json  config.json
docs/: apple.md  architecture.md  two-finger-tap.md
scripts/: dev.sh  install.sh  service.sh  uninstall.sh  update-config.sh  update.sh
src/: config.rs  device.rs  event_handler.rs  gesture.rs  main.rs  multitouch.rs
