[package]
name = "mouse-gesture-recognition"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Mouse gesture recognition for Apple Magic Mouse on Linux"
license = "MIT OR Apache-2.0"

[dependencies]
evdev = "0.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
nalgebra = "0.32"
lazy_static = "1.4"
